--- a/src/global.scss
+++ b/src/global.scss
@@ -24,4 +24,17 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
-@import "~leaflet/dist/leaflet.css"
+@import "~leaflet/dist/leaflet.css";
+
+
+.leaflet-marker-icon,
+.leaflet-marker-shadow,
+.leaflet-image-layer,
+.leaflet-pane>svg path,
+.leaflet-tile-container {
+    pointer-events: all!important;
+}
+
+.border-show{
+    border: 2px solid blue;
+ }
