--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,6 +1,19 @@
-#map {
-    height: 100vh;
-    width:100%;
-    padding:0px;
-    margin:0px;
- } 
+#mapId {
+    height: 100%;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
+
+.position {
+    position: absolute;
+    bottom: 0;
+    min-width: 300px;
+    background: #fff;
+    z-index: 999;
+    height: 100px;
+    border-radius: 10px;
+    margin: 0 auto;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
