--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,9 +1,109 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>signup</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <div id="container">
+    <p class="capitalize">Create <br> Your Account</p>
+    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" (keyup.enter)="onSubmit()" novalidate>
+      <div>
+        <ion-item mode="md">
+          <ion-label position="floating">
+            <ion-icon slot="start" name="person-outline"></ion-icon>
+            Full Name
+            <ng-container *ngIf="getControl.full_name.touched">
+              <span class="text-danger"
+                *ngIf="getControl.full_name.errors?.required">Full Name is Required*</span>
+            </ng-container>
+          </ion-label>
+          <ion-input placeholder="Enter Full Name" type="text" formControlName="full_name"></ion-input>
+        </ion-item>
 
-<ion-content>
+        <ion-item mode="md">
+          <ion-label position="floating">
+            <ion-icon slot="start" name="person-add-outline"></ion-icon>
+            Username
+            <ng-container *ngIf="getControl.user_name.touched">
+              <span class="text-danger"
+                *ngIf="getControl.user_name.errors?.required">Username is Required*</span>
+            </ng-container>
+          </ion-label>
+          <ion-input placeholder="Enter Username" type="text" formControlName="user_name"></ion-input>
+        </ion-item>
 
+        <ion-item mode="md">
+          <ion-label position="floating">
+            <ion-icon slot="start" name="mail-outline"></ion-icon>
+            Email Address
+            <ng-container *ngIf="getControl.email_address.touched">
+              <span class="text-danger" *ngIf="getControl.email_address.errors?.required">Email is Required*</span>
+              <span class="text-danger"
+                *ngIf="(getControl.email_address.invalid && !getControl.email_address.errors?.required)">Invalid Email*</span>
+            </ng-container>
+          </ion-label>
+          <ion-input placeholder="Enter Email" type="email" formControlName="email_address"></ion-input>
+        </ion-item>
+
+        <ion-item mode="md">
+          <ion-label position="floating">
+            <ion-icon slot="start" name="lock-closed-outline"></ion-icon>
+            Password
+            <ng-container *ngIf="getControl.password.touched">
+              <span class="text-danger"
+                *ngIf="getControl.password.errors?.required">Password is Required*</span>
+            </ng-container>
+          </ion-label>
+          <ion-input placeholder="Enter Password" type="{{showPass ? 'text': 'password'}}" formControlName="password">
+          </ion-input>
+          <ion-icon name="eye-outline" slot="end" *ngIf="!showPass" (click)="showPass = !showPass"
+            class="ion-align-self-center"></ion-icon>
+          <ion-icon name="eye-off-outline" slot="end" *ngIf="showPass" (click)="showPass = !showPass"
+            class="ion-align-self-center"></ion-icon>
+        </ion-item>
+
+        <ion-item mode="md">
+          <ion-label position="floating">
+            <ion-icon slot="start" name="lock-closed-outline"></ion-icon>
+            Confirm Password
+            <ng-container *ngIf="getControl.password.touched">
+              <span class="text-danger"
+                *ngIf="getControl.confirm_password.errors?.required">Confirm Password is Required*</span>
+            </ng-container>
+          </ion-label>
+          <ion-input placeholder="Enter Confirm Password" type="{{showPass ? 'text': 'password'}}"
+            formControlName="confirm_password">
+          </ion-input>
+          <ion-icon name="eye-outline" slot="end" *ngIf="!showPass" (click)="showPass = !showPass"
+            class="ion-align-self-center"></ion-icon>
+          <ion-icon name="eye-off-outline" slot="end" *ngIf="showPass" (click)="showPass = !showPass"
+            class="ion-align-self-center"></ion-icon>
+        </ion-item>
+      </div>
+
+      <div style="font-size: 12px;" class="text-danger"
+        *ngIf="(getControl.password.errors && !getControl.password.errors?.required) || (getControl.confirm_password.errors && !getControl.confirm_password.errors?.required)">
+        Password must contain more than 8 characters, 1 numeric, 1 upper case letter, and 1 special character($@$!%*?&).
+      </div>
+
+      <ion-button expand="block" shape="round" color="dark"
+        [disabled]="signupForm.invalid || (signupForm.value.password != signupForm.value.confirm_password) "
+        type="submit">
+        Sign Up
+      </ion-button>
+
+    </form>
+  </div>
 </ion-content>
+
+<ion-footer collapse="fade" class="ion-no-border">
+  <ion-toolbar [routerLink]="['/login']" mode="ios">
+    <ion-title>
+      <ion-button fill="clear" color="dark" size="small">
+        {{appText?.create_account?.value}}
+      </ion-button>
+    </ion-title>
+  </ion-toolbar>
+</ion-footer>
