--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,9 +11,9 @@
       <ion-label>Open Layer</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button (click)="general.toggleMenu()">
+      <ion-icon name="menu"></ion-icon>
+      <ion-label>Menu</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
