--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -9,7 +9,7 @@
     position: absolute;
     bottom: 0;
     min-width: 300px;
-    background: #fff;
+    background: var(--ion-color-light);
     z-index: 999;
     height: 100px;
     border-radius: 10px;
