--- a/src/global.scss
+++ b/src/global.scss
@@ -39,6 +39,14 @@
     border: 2px solid blue;
 }
 
+.my-box{
+    border: 2px solid orange;
+}
+
+.flex{
+    display: flex;
+}
+
 .text-danger {
     color: var(--ion-color-danger);
     text-align: center;
