--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,14 +1,14 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="home">
       <ion-icon name="map"></ion-icon>
       <ion-label>LeafLet</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Open Layer</ion-label>
+    <ion-tab-button tab="myplaces">
+      <ion-icon name="location"></ion-icon>
+      <ion-label>My Places</ion-label>
     </ion-tab-button>
 
     <ion-tab-button (click)="general.toggleMenu()">
