--- a/src/global.scss
+++ b/src/global.scss
@@ -25,7 +25,7 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 @import "~leaflet/dist/leaflet.css";
-
+@import '~leaflet-geosearch/dist/geosearch.css';
 
 .leaflet-marker-icon,
 .leaflet-marker-shadow,
