selection enabled for my boxes and closed for other user boxes

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -17,6 +17,9 @@
 
   <ng-container *ngIf="selectedBoxs.length > 0">
     <div class="position ion-padding">
+      <div class="icon" (click)="removeSelectedBoxes()">
+        <ion-icon name="close"></ion-icon>
+      </div>
       <div class="ion-text-center">Buy {{selectedBoxs.length}} boxes</div> 
       <div>
         <ion-button (click)="buyNow()" expand="block">Buy Now</ion-button>
@@ -26,6 +29,9 @@
 
   <ng-container *ngIf="myBoxs.length > 0">
     <div class="position2 ion-padding">
+      <div class="icon"  (click)="removeMyBoxes()">
+        <ion-icon name="close"></ion-icon>
+      </div>
       <div>Select Location Image:</div>
       <div class="flex my-b">
         <div *ngFor="let i of [].constructor(5)">
