--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -51,3 +51,13 @@
         }
     }
 }
+
+.box-img{
+    width: 150px;
+    height: 100px;
+    object-fit: contain;
+}
+
+.selectImg{
+    border: 1px solid red;
+}
