--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -7,7 +7,7 @@
 
 .position {
     position: absolute;
-    bottom: 0;
+    bottom: 60px;
     min-width: 300px;
     background: var(--ion-color-light);
     z-index: 999;
@@ -25,15 +25,16 @@
 
 .position2 {
     position: absolute;
-    bottom: 0;
+    bottom: 60px;
     min-width: 300px;
-    background: var(--ion-color-light);
     z-index: 999;
-    height: 160px;
+    height: 75px;
     border-radius: 10px;
     margin: 0 auto;
+    background: var(--ion-color-light);
     left: 50%;
-    transform: translate(-50%, 1%);
+    transform: translate(-50%, 0%);
+
     .icon{
         position: absolute;
         right: 5px;
