my place API and UI udpate

--- a/src/app/pages/myplaces/myplaces.page.html
+++ b/src/app/pages/myplaces/myplaces.page.html
@@ -1,35 +1,39 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      My Places
+      On Sale
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
 
-  <ion-card mode="ios" *ngFor="let c of [].constructor(5); let i = index;">
+  <ion-card mode="ios" *ngFor="let c of tilesList; let i = index;">
     <ion-card-content>
 
       <div class="flex cards">
-        <div class="sale" *ngIf="i % 2 == 0">on Sale</div>
+        <div class="sale">on Sale</div>
         <div>
-          <img src="https://via.placeholder.com/150" class="img" />
+          <img [src]=" c.image != ''? c.image : 'https://via.placeholder.com/150' " class="img" />
         </div>
         <div>
           <div>
-            Titles: <b>20</b>
+            Titles: <b>{{c?.tiles}}</b>
           </div>
           <div>
             Buying Price: <b>$0.1</b>
           </div>
           <div>
-            Current Price: <b>$0.20</b>
+            Current Price: <b>${{(c?.tiles * 0.1).toFixed(1)}}</b>
           </div>
         </div>
       </div>
 
-      <div class="flex btns">
+      <ion-button color="dark" expand="block" size="small">
+        Send Offer
+      </ion-button>
+
+      <!-- <div class="flex btns">
         <div *ngIf="i % 2 != 0">
           <ion-button fill="outline" color="dark" expand="block" size="small">
             Sell Boxes
@@ -46,7 +50,7 @@
             View Details
           </ion-button>
         </div>
-      </div>
+      </div> -->
     </ion-card-content>
   </ion-card>
 </ion-content>
