--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,7 +8,7 @@
 
     <ion-tab-button tab="myplaces">
       <ion-icon name="location"></ion-icon>
-      <ion-label>My Places</ion-label>
+      <ion-label>On Sale</ion-label>
     </ion-tab-button>
 
     <ion-tab-button (click)="general.toggleMenu()">
