--- a/src/app/pages/myplaces/myplaces.page.html
+++ b/src/app/pages/myplaces/myplaces.page.html
@@ -29,9 +29,9 @@
         </div>
       </div>
 
-      <ion-button color="dark" expand="block" size="small">
+      <!-- <ion-button color="dark" expand="block" size="small">
         Send Offer
-      </ion-button>
+      </ion-button> -->
 
       <!-- <div class="flex btns">
         <div *ngIf="i % 2 != 0">
