--- a/src/global.scss
+++ b/src/global.scss
@@ -26,6 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 @import "~leaflet/dist/leaflet.css";
 @import '~leaflet-geosearch/dist/geosearch.css';
+@import '~quill/dist/quill.snow.css';
 
 .leaflet-marker-icon,
 .leaflet-marker-shadow,
