Images Update, Level Update, Buy btn added to show grids, directly load to 15 level, bottom menu update, Tab bar Smaller, Images Size to full.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,6 +11,14 @@
 
   <div id="mapId"></div>
 
+  <ng-container *ngIf="showBuyBtn">
+    <div class="buybtn" (click)="showGrid()">
+      <ion-icon name="globe-outline"></ion-icon>
+      <br />
+      Buy
+    </div>
+  </ng-container>
+
   <ng-container *ngIf="selectedBoxs.length > 0">
     <div class="position ion-padding">
       <div class="icon" (click)="removeSelectedBoxes()">
