--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -76,3 +76,17 @@
         font-size: 20px;
     }
 }
+
+.buybtn{
+    position: absolute;
+    top: 15%;
+    z-index: 999;
+    right: 4px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: var(--ion-color-light);
+    padding: 5px;
+    ion-icon{
+        font-size: 20px;
+    }
+}
