--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="map"></ion-icon>
-      <ion-label>LeafLet</ion-label>
+      <ion-label>FlatMeta</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="myplaces">
