location accuracy, buy button with controls

--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -6,5 +6,9 @@
     <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser"/>
   </feature>
 
+  <feature name="RequestLocationAccuracy">
+    <param name="android-package" value="cordova.plugin.RequestLocationAccuracy"/>
+  </feature>
+
   
 </widget>
