--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -79,13 +79,14 @@
 
 .buybtn{
     position: absolute;
-    top: 15%;
+    top: 13%;
     z-index: 999;
-    right: 4px;
-    border-radius: 10px;
+    left: 2.5%;
+    border-radius: 5px;
     text-align: center;
     background-color: var(--ion-color-light);
-    padding: 5px;
+    padding: 2px;
+    border: 1px solid darkgrey;
     ion-icon{
         font-size: 20px;
     }
