--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -87,7 +87,7 @@
 
 
       <ion-button expand="block" shape="round" color="dark" type="submit">
-        Sign Up
+        Update
       </ion-button>
 
     </form>
