--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,14 +8,14 @@
           <ion-label position="floating">
             <ion-icon slot="start" name="person"></ion-icon>
             Email Address
-            <ng-container *ngIf="getLoginControl.email_address.touched">
-              <span class="text-danger" *ngIf="getLoginControl.email_address.errors?.required">Email is required*</span>
+            <ng-container *ngIf="getLoginControl.email.touched">
+              <span class="text-danger" *ngIf="getLoginControl.email.errors?.required">Email is required*</span>
               <span class="text-danger"
-                *ngIf="(getLoginControl.email_address.invalid && !getLoginControl.email_address.errors?.required)">Invialid
+                *ngIf="(getLoginControl.email.invalid && !getLoginControl.email.errors?.required)">Invialid
                 Email*</span>
             </ng-container>
           </ion-label>
-          <ion-input type="email" placeholder="Email address" formControlName="email_address" enterkeyhint="next"
+          <ion-input type="email" placeholder="Email address" formControlName="email" enterkeyhint="next"
             (keydown)="onKeydown($event)">
           </ion-input>
         </ion-item>
