--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -20,39 +20,39 @@
           <ion-label position="floating">
             <ion-icon slot="start" name="person-outline"></ion-icon>
             Full Name
-            <ng-container *ngIf="getControl.full_name.touched">
-              <span class="text-danger" *ngIf="getControl.full_name.errors?.required">Full Name is Required*</span>
+            <ng-container *ngIf="getControl.fullname.touched">
+              <span class="text-danger" *ngIf="getControl.fullname.errors?.required">Full Name is Required*</span>
             </ng-container>
           </ion-label>
-          <ion-input placeholder="Enter Full Name" type="text" formControlName="full_name"></ion-input>
+          <ion-input placeholder="Enter Full Name" type="text" formControlName="fullname"></ion-input>
         </ion-item>
 
         <ion-item mode="md">
           <ion-label position="floating">
             <ion-icon slot="start" name="person-add-outline"></ion-icon>
             Username
-            <ng-container *ngIf="getControl.user_name.touched">
-              <span class="text-danger" *ngIf="getControl.user_name.errors?.required">Username is Required*</span>
+            <ng-container *ngIf="getControl.username.touched">
+              <span class="text-danger" *ngIf="getControl.username.errors?.required">Username is Required*</span>
             </ng-container>
           </ion-label>
-          <ion-input placeholder="Enter Username" type="text" formControlName="user_name" readonly></ion-input>
+          <ion-input placeholder="Enter Username" type="text" formControlName="username" readonly></ion-input>
         </ion-item>
 
         <ion-item mode="md">
           <ion-label position="floating">
             <ion-icon slot="start" name="mail-outline"></ion-icon>
             Email Address
-            <ng-container *ngIf="getControl.email_address.touched">
-              <span class="text-danger" *ngIf="getControl.email_address.errors?.required">Email is Required*</span>
+            <ng-container *ngIf="getControl.email.touched">
+              <span class="text-danger" *ngIf="getControl.email.errors?.required">Email is Required*</span>
               <span class="text-danger"
-                *ngIf="(getControl.email_address.invalid && !getControl.email_address.errors?.required)">Invalid
+                *ngIf="(getControl.email.invalid && !getControl.email.errors?.required)">Invalid
                 Email*</span>
             </ng-container>
           </ion-label>
-          <ion-input placeholder="Enter Email" type="email" formControlName="email_address" readonly></ion-input>
+          <ion-input placeholder="Enter Email" type="email" formControlName="email" readonly></ion-input>
         </ion-item>
 
-        <ion-item mode="md">
+        <!-- <ion-item mode="md">
           <ion-label position="floating">
             <ion-icon slot="start" name="call-outline"></ion-icon>
             Phone Number
@@ -63,7 +63,7 @@
           </ion-label>
           <ion-input placeholder="Enter phone_number" type="tel" formControlName="phone_number">
           </ion-input>
-        </ion-item>
+        </ion-item> -->
 
         <!-- <ion-item mode="md">
           <ion-label position="floating">
