Buy now API, get purchased Tiles, show my tiles update

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -51,13 +51,13 @@
     </div>
   </ng-container>
 
-  <ng-container *ngIf="myBoxs.length == 2">
+  <!-- <ng-container *ngIf="myBoxs.length == 2">
     <div class="swipe" (click)="swipeImg()">
       <ion-icon name="swap-vertical-outline"></ion-icon>
       <br />
       Swap
     </div>
-  </ng-container>
+  </ng-container> -->
 
 
   <!-- Sheet Modal -->
