--- a/src/app/pages/cart/cart.page.html
+++ b/src/app/pages/cart/cart.page.html
@@ -73,7 +73,7 @@
       Confirm Checkout
     </ion-button>
 
-    <ion-button color="dark" expand="block" (click)="removeFromCart(true)" fill="outline" *ngIf="cartData.length > 0">
+    <ion-button color="dark" expand="block" (click)="removeFromCart()" fill="outline" *ngIf="cartData.length > 0">
       Clear Cart
     </ion-button>
 
