--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -78,14 +78,14 @@
         <ion-grid>
           <ion-row>
             <ion-col size="4" *ngFor="let bi of boxImgs">
-              <div (click)="selectedImg = bi" [ngClass]="[selectedImg == bi ? 'selectImg' : '']">
-                <img [src]="bi" class="box-img">
+              <div (click)="selectedImg = bi" [ngClass]="[selectedImg?.url == bi?.url ? 'selectImg' : '']">
+                <img [src]="bi?.url" class="box-img">
               </div>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col *ngIf="showUplaodedImage" size="12">
-              <img [src]="selectedImg" class="box-img">
+              <img [src]="selectedImg.url" class="box-img">
             </ion-col>
             <ion-col size="12">
               <input type="file" #fileInput (change)="choosePhoto($event)" hidden="true" accept="image/*"
