--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -85,7 +85,9 @@
           </ion-row>
           <ion-row>
             <ion-col *ngIf="showUplaodedImage" size="12">
-              <img [src]="selectedImg.url" class="box-img">
+              <div class="ion-text-center">
+                <img [src]="selectedImg.url" class="box-img">
+              </div>
             </ion-col>
             <ion-col size="12">
               <input type="file" #fileInput (change)="choosePhoto($event)" hidden="true" accept="image/*"
